   > Seshat's Tome
   > Seshat's Opus
  ~ 8 magic equips:
   > Comet Charm
   > Magic Coin
   > Elemental Lace
   > Conjurer's Harp
   > Orb of Wrath
   > Orb of Protection
   > Dark Orb (Tome)
   > Wyvern's Fury (Tome)
  ~ 2 powers:
   > [REDACTED]
   > [REDACTED]
  ~ 5 vanities:
   > Bandito Outfit
   > Cavalier Outfit
   > Sorcerer Outfit
   > Bishop Outfit
   > Scapegrace Outfit
 - Added 23 new enemies:
  ~ [REDACTED GENERAL]
  ~ Darkhound
  ~ Beet Boxer
  ~ Feral Bat
  ~ Baby Turtle
  ~ Giant Turtle
  ~ Flytrap
  ~ Horrorspore
  ~ Tarantula
  ~ Baby Ent
  ~ Baby Dragon
  ~ [REDACTED DRAGON]
  ~ Ice Slime
  ~ Ice Golem
  ~ Chilling Apparition
  ~ Werewolf
  ~ Sahuagin
  ~ Fire Spirit
  ~ Water Spirit
  ~ Earth Spirit
  ~ Wind Spirit
  ~ Mimic
  ~ Phoenix

Changes:
 - Recapped the max level from level 20 to level 25.
 - Replaced the Mage class's 2nd magic equip slot with an offhand slot (light shields).
 - The game's icons have finally been resprited at a non-blurred 32px resolution. Many items have additionally had their icons changed to stand out a bit more.
 - Skill families will now be condensed into a single dropdown. Old save patching must be enabled when updating for this to work properly.
 - Completed the salvaging system. Many items throughout the entire game are now salvageable, making the system much more relevant.
 - Changed up the preloader / title screen background.
 - Reverted most dungeons back to the old dungeon map border style (same as the indoors style).
 - Many shops have had their stock changed. Some enemy drop pools have also been adjusted.
 - The 4-skeleton enemy troop now spawns frequently anywhere in the "Forest Arena...?" after the penultimate Laeryidyean cutscene.
  ~ Additionally, the Adonian Monsters troop has been altered. No troops with the Skeleton can be encountered anymore, effectively removing the enemy from the game.