@@ -197,7 +197,7 @@ Additions:
    > Sorcerer Outfit
    > Bishop Outfit
    > Scapegrace Outfit
- - Added 23 new enemies:
+ - Added 25 new enemies:
   ~ [REDACTED GENERAL]
   ~ Darkhound
   ~ Beet Boxer
@@ -220,6 +220,8 @@ Additions:
   ~ Earth Spirit
   ~ Wind Spirit
   ~ Mimic
+  ~ Attacker Tellurium Golem
+  ~ Defender Tellurium Golem
   ~ Phoenix
 
 Changes:
